Sügavuti läbimine valmis - tipu klass hoolitseb ise enda seisu eest nüüd - laiuti läbimises vale andmestruktuuri nimi parandatud