@@ -8,27 +8,26 @@ import com.example.graphgrader.Util.TipuSobivus;
 import javafx.fxml.Initializable;
 
 import java.net.URL;
-import java.util.ArrayList;
-import java.util.List;
+import java.util.ArrayDeque;
+import java.util.Deque;
 import java.util.ResourceBundle;
 
-// Korras
-public class LaiutiController extends Controller implements Initializable {
+public class SügavutiEesController extends Controller implements Initializable {
 
-    public List<Tipp> jarjekord;
+    public Deque<Tipp> magasin;
 
     @Override
     public void initialize(URL url, ResourceBundle resourceBundle) {
-        jarjekord = new ArrayList<>();
+        magasin = new ArrayDeque<>();
         PäiseController.testController = this;
-        PäiseController.andmestruktuuriNimi.setText("Järjekord");
+        PäiseController.andmestruktuuriNimi.setText("Magasin");
         PäiseController.andmestruktuur.setDisable(true);
     }
 
     @Override
     public void lisa(Tipp t) {
-        jarjekord.add(t);
-        t.seis = TipuSeis.ANDMESTRUKTUURIS;
+        magasin.add(t);
+        t.muudaSeisu(TipuSeis.ANDMESTRUKTUURIS);
         PäiseController.andmestruktuur.setDisable(false);
     }
 
@@ -37,12 +36,11 @@ public class LaiutiController extends Controller implements Initializable {
 
     @Override
     public void vota() {
-        if (jarjekord.isEmpty()) return;
-        Tipp q = jarjekord.remove(0);
-        PäiseController.pseudoStruktuur.getChildren().remove(0);
+        if (magasin.isEmpty()) return;
+        Tipp q = magasin.removeLast();
+        PäiseController.pseudoStruktuur.getChildren().remove(PäiseController.pseudoStruktuur.getChildren().size() - 1);
         if (q.seis == TipuSeis.TÖÖDELDUD) return;
-        q.tippGraafil.setPraegune();
-        q.seis = TipuSeis.PRAEGUNE;
+        q.muudaSeisu(TipuSeis.PRAEGUNE);
         PäiseController.praegune = q;
         PäiseController.andmestruktuur.setDisable(true);
     }
@@ -51,9 +49,9 @@ public class LaiutiController extends Controller implements Initializable {
     public TipuSobivus kontrolli(Tipp t) {
         if (t.seis == TipuSeis.TÖÖDELDUD) return new TipuSobivus(false, t);
         if (t.seis != TipuSeis.PRAEGUNE) return new TipuSobivus(false, null);
-        for (Tipp tipp : t.alluvad) {
-            if (tipp.seis != TipuSeis.ANDMESTRUKTUURIS && tipp.seis != TipuSeis.TÖÖDELDUD) return new TipuSobivus(false, tipp);
-        }
+        for (Tipp tipp : t.alluvad)
+            if (tipp.seis != TipuSeis.TÖÖDELDUD && tipp.seis != TipuSeis.ANDMESTRUKTUURIS) return new TipuSobivus(false, tipp);
+
         PäiseController.andmestruktuur.setDisable(false);
         return new TipuSobivus(true, null);
     }
